# controllers/concepto_nomina.go
@@ -12,13 +12,13 @@ import (
 	"github.com/astaxie/beego/logs"
 )
 
-// PreliquidacionController operations for Preliquidacion
-type PreliquidacionController struct {
+// ConceptoNominaController operations for ConceptoNomina
+type ConceptoNominaController struct {
 	beego.Controller
 }
 
 // URLMapping ...
-func (c *PreliquidacionController) URLMapping() {
+func (c *ConceptoNominaController) URLMapping() {
 	c.Mapping("Post", c.Post)
 	c.Mapping("GetOne", c.GetOne)
 	c.Mapping("GetAll", c.GetAll)
@@ -28,15 +28,15 @@ func (c *PreliquidacionController) URLMapping() {
 
 // Post ...
 // @Title Post
-// @Description create Preliquidacion
-// @Param	body		body 	models.Preliquidacion	true		"body for Preliquidacion content"
-// @Success 201 {int} models.Preliquidacion
+// @Description create ConceptoNomina
+// @Param	body		body 	models.ConceptoNomina	true		"body for ConceptoNomina content"
+// @Success 201 {int} models.ConceptoNomina
 // @Failure 400 the request contains incorrect syntax
 // @router / [post]
-func (c *PreliquidacionController) Post() {
-	var v models.Preliquidacion
+func (c *ConceptoNominaController) Post() {
+	var v models.ConceptoNomina
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if _, err := models.AddPreliquidacion(&v); err == nil {
+		if _, err := models.AddConceptoNomina(&v); err == nil {
 			c.Ctx.Output.SetStatus(201)
 			c.Data["json"] = map[string]interface{}{"Success": true, "Status": "201", "Message": "Registration successful", "Data": v}
 		} else {
@@ -54,15 +54,15 @@ func (c *PreliquidacionController) Post() {
 
 // GetOne ...
 // @Title Get One
-// @Description get Preliquidacion by id
+// @Description get ConceptoNomina by id
 // @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.Preliquidacion
+// @Success 200 {object} models.ConceptoNomina
 // @Failure 404 not found resource
 // @router /:id [get]
-func (c *PreliquidacionController) GetOne() {
+func (c *ConceptoNominaController) GetOne() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v, err := models.GetPreliquidacionById(id)
+	v, err := models.GetConceptoNominaById(id)
 	if err != nil {
 		logs.Error(err)
 		c.Data["mesaage"] = "Error service GetOne: The request contains an incorrect parameter or no record exists"
@@ -75,17 +75,17 @@ func (c *PreliquidacionController) GetOne() {
 
 // GetAll ...
 // @Title Get All
-// @Description get Preliquidacion
+// @Description get ConceptoNomina
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
 // @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
 // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Preliquidacion
+// @Success 200 {object} models.ConceptoNomina
 // @Failure 404 not found resource
 // @router / [get]
-func (c *PreliquidacionController) GetAll() {
+func (c *ConceptoNominaController) GetAll() {
 	var fields []string
 	var sortby []string
 	var order []string
@@ -127,7 +127,7 @@ func (c *PreliquidacionController) GetAll() {
 		}
 	}
 
-	l, err := models.GetAllPreliquidacion(query, fields, sortby, order, offset, limit)
+	l, err := models.GetAllConceptoNomina(query, fields, sortby, order, offset, limit)
 	if err != nil {
 		logs.Error(err)
 		c.Data["mesaage"] = "Error service GetAll: The request contains an incorrect parameter or no record exists"
@@ -143,18 +143,18 @@ func (c *PreliquidacionController) GetAll() {
 
 // Put ...
 // @Title Put
-// @Description update the Preliquidacion
+// @Description update the ConceptoNomina
 // @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.Preliquidacion	true		"body for Preliquidacion content"
-// @Success 200 {object} models.Preliquidacion
+// @Param	body		body 	models.ConceptoNomina	true		"body for ConceptoNomina content"
+// @Success 200 {object} models.ConceptoNomina
 // @Failure 400 the request contains incorrect syntax
 // @router /:id [put]
-func (c *PreliquidacionController) Put() {
+func (c *ConceptoNominaController) Put() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v := models.Preliquidacion{Id: id}
+	v := models.ConceptoNomina{Id: id}
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if err := models.UpdatePreliquidacionById(&v); err == nil {
+		if err := models.UpdateConceptoNominaById(&v); err == nil {
 			c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "Update successful", "Data": v}
 		} else {
 			logs.Error(err)
@@ -171,15 +171,15 @@ func (c *PreliquidacionController) Put() {
 
 // Delete ...
 // @Title Delete
-// @Description delete the Preliquidacion
+// @Description delete the ConceptoNomina
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
 // @Failure 404 not found resource
 // @router /:id [delete]
-func (c *PreliquidacionController) Delete() {
+func (c *ConceptoNominaController) Delete() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	if err := models.DeletePreliquidacion(id); err == nil {
+	if err := models.DeleteConceptoNomina(id); err == nil {
 		d := map[string]interface{}{"Id": id}
 		c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "Delete successful", "Data": d}
 	} else {
